<resources>
    <string name="app_name">Modeling</string>
    <string name="mensaje_bienvenida">¡Bienvenido!</string>
    <string name="telefono_usuario">Ingresa tu número telefónico</string>
    <string name="contrasena">Crea una contraseña</string>
    <string name="confirma_contrasena">Confirma tu contraseña</string>
    <string name="btn_inicio_sesion">Entrar</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="btn_regresar">Regresar</string>
    <string name="boton_listo">Listo</string>
    <string name="mensaje_transaccion">Seleccione la opción a realizar:</string>
    <string name="radio_button_uno">Retirar</string>
    <string name="radio_button_dos">Depositar</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="info_mapa">¿Quieres ver dónde está tu próximo cajero virtual?</string>
    <string name="codigo_qr">Generar código</string>
    <string name="mensaje_qr">Muestra el siguiente código a un empleado</string>
    <string name="txt_edo_cuenta">Estado de cuenta</string>
    <string name="txt_saldo">Saldo:</string>
    <string name="tv_saldo">$5000</string>
    <string name="txt_tipo_tramite">Tipo de trámite:</string>
    <string name="tv_tipo_tramite">Depósito</string>
    <string name="verificar_datos">Verifica los datos</string>
    <string name="edt_value">vbtunicnri565</string>
    <string name="aceptar">Aceptar</string>
    <string name="regresar">Regresar</string>
    <string name="mensaje_cantidadDeposito">Cantidad a depositar: $</string>
    <string name="mensaje_deposito">Deposito</string>
    <string name="mensaje_saldo">Saldo</string>
    <string name="mensaje_cantidadSaldo">$0.00</string>
    <string name="contrasena_inicio">Ingresa tu contraseña</string>
    <string name="mensaje_registro">¿No tienes una cuenta?</string>
    <string name="mensaje_datos">Digita un número de teléfono y una contraseña segura. </string>
    <string name="mensaje_registrar">Registro </string>
    <string name="txt_elegir_usuario">¿Qué tipo de usuario eres?</string>
    <string name="txt_usuario">Cliente</string>
    <string name="txt_tienda">Tienda</string>
    <string name="txt_leer">Leer QR</string>
    <string name="txt_mensajeTienda">Pide al cliente su codigo QR</string>
    <string name="btn_volver">Realizar otra transacción</string>
</resources>
