<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:maxWidth="420dp"
    android:maxHeight="900dp"
    android:minWidth="420dp"
    android:minHeight="900dp"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/mensaje_registrar"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="148dp"
        android:text="@string/btn_regresar"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirma_contrasena"
        app:layout_constraintVertical_bias="0.236" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="244dp"
        android:layout_marginBottom="148dp"
        android:text="@string/btn_registrarse"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirma_contrasena"
        app:layout_constraintVertical_bias="0.236" />

    <EditText
        android:id="@+id/txt_usuario"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/telefono_usuario"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_bienvenida" />

    <EditText
        android:id="@+id/contrasena"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_usuario" />

    <EditText
        android:id="@+id/confirma_contrasena"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/confirma_contrasena"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasena" />

    <TextView
        android:id="@+id/mensaje_datos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="76dp"
        android:text="@string/mensaje_datos"
        app:layout_constraintBottom_toTopOf="@+id/txt_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_bienvenida" />

</android.support.constraint.ConstraintLayout>