<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:maxWidth="420dp"
    android:maxHeight="900dp"
    android:minWidth="420dp"
    android:minHeight="900dp"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/mensaje_bienvenida"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="207dp" />

    <TextView
        android:id="@+id/txt_bienvenida2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/mensaje_registro"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_regresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_entrar" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/btn_inicio_sesion"
        app:layout_constraintBottom_toTopOf="@+id/txt_bienvenida2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasena" />

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="96dp"
        android:onClick="activityRegistro"
        android:text="@string/btn_registrarse"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_bienvenida2" />

    <EditText
        android:id="@+id/txt_usuario"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/telefono_usuario"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_bienvenida" />

    <EditText
        android:id="@+id/contrasena"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/contrasena_inicio"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_usuario" />

</android.support.constraint.ConstraintLayout>