<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".ElegirUsuario">

    <TextView
        android:id="@+id/txt_elegir_usuario"
        android:layout_width="289dp"
        android:layout_height="38dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="600dp"
        android:text="@string/txt_elegir_usuario"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="118dp"
        android:layout_height="32dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="234dp"
        android:layout_marginBottom="561dp"
        android:text="@string/txt_usuario"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_elegir_usuario" />

    <TextView
        android:id="@+id/txt_tienda"
        android:layout_width="111dp"
        android:layout_height="35dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="238dp"
        android:layout_marginBottom="492dp"
        android:text="@string/txt_tienda"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Switch
        android:id="@+id/switch_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="555dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_tienda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="493dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_tienda"
        app:layout_constraintTop_toBottomOf="@+id/switch_usuario" />

    <Button
        android:id="@+id/btn_aceptar_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="372dp"
        android:text="@string/aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tienda" />
</android.support.constraint.ConstraintLayout>